--- a/www/index.html
+++ b/www/index.html
@@ -8,18 +8,17 @@
         <link rel="stylesheet" href="css/ionic.app.css"></script>
         <link rel="stylesheet" href="css/style.css"></script>
         <!-- endinject -->
-
         <!-- bower:js -->
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-animate/angular-animate.js"></script>
         <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+        <script src="lib/angular-resource/angular-resource.js"></script>
         <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
         <!-- endbower -->
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
-
         <!-- inject:js -->
         <script src="js/app.constant.js"></script>
         <script src="js/app.js"></script>
@@ -41,16 +40,5 @@
         have templates inline in this html file if you'd like).
         -->
         <ion-nav-view></ion-nav-view>
-
     </body>
 </html>
-l>
-
-l>
-ew>
-
-    </body>
-</html>
-l>
-
-l>
