--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,17 @@
         <!-- inject:js -->
         <script src="js/app.constant.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/app/controllers.js"></script>
         <script src="js/components/services.js"></script>
+        <script src="js/app/controllers.js"></script>
+        <script src="js/components/auth/auth.module.js"></script>
+        <script src="js/components/auth/auth.service.js"></script>
+        <script src="js/components/auth/interceptor.service.js"></script>
+        <script src="js/components/auth/router.decorator.js"></script>
+        <script src="js/components/auth/user.service.js"></script>
+        <script src="js/components/oauth-buttons/oauth-buttons.controller.js"></script>
+        <script src="js/components/oauth-buttons/oauth-buttons.directive.js"></script>
+        <script src="js/components/util/util.module.js"></script>
+        <script src="js/components/util/util.service.js"></script>
         <!-- endinject -->
     </head>
     <body ng-app="starter">
