--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
         <script src="lib/angular-animate/angular-animate.js"></script>
         <script src="lib/angular-sanitize/angular-sanitize.js"></script>
         <script src="lib/angular-resource/angular-resource.js"></script>
+        <script src="lib/angular-cookies/angular-cookies.js"></script>
         <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
         <!-- endbower -->
         <!-- ionic/angularjs js -->
@@ -22,8 +23,8 @@
         <!-- inject:js -->
         <script src="js/app.constant.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/components/services.js"></script>
         <script src="js/app/controllers.js"></script>
+        <script src="js/components/services.js"></script>
         <script src="js/components/auth/auth.module.js"></script>
         <script src="js/components/auth/auth.service.js"></script>
         <script src="js/components/auth/interceptor.service.js"></script>
