--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,9 @@
         <!-- inject:js -->
         <script src="js/app.constant.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/app/controllers.js"></script>
+        <script src="js/app/auth.controller.js"></script>
+        <script src="js/app/controllers.module.js"></script>
+        <script src="js/app/dashboard.controller.js"></script>
         <script src="js/components/services.js"></script>
         <script src="js/components/auth/auth.module.js"></script>
         <script src="js/components/auth/auth.service.js"></script>
