--- a/www/index.html
+++ b/www/index.html
@@ -8,16 +8,13 @@
         <link rel="stylesheet" href="css/ionic.app.css"></script>
         <link rel="stylesheet" href="css/style.css"></script>
         <!-- endinject -->
+        <script src="lib/ionic/js/ionic.bundle.js"></script>
         <!-- bower:js -->
         <script src="lib/angular/angular.js"></script>
-        <script src="lib/angular-animate/angular-animate.js"></script>
-        <script src="lib/angular-sanitize/angular-sanitize.js"></script>
         <script src="lib/angular-resource/angular-resource.js"></script>
         <script src="lib/angular-cookies/angular-cookies.js"></script>
-        <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
         <!-- endbower -->
         <!-- ionic/angularjs js -->
-        <script src="lib/ionic/js/ionic.bundle.js"></script>
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
         <!-- inject:js -->
@@ -27,6 +24,8 @@
         <script src="js/app/controllers.module.js"></script>
         <script src="js/app/dashboard.controller.js"></script>
         <script src="js/components/services.js"></script>
+        <script src="js/app/parameters/controllers.module.js"></script>
+        <script src="js/app/parameters/my-sports.controller.js"></script>
         <script src="js/components/auth/auth.module.js"></script>
         <script src="js/components/auth/auth.service.js"></script>
         <script src="js/components/auth/interceptor.service.js"></script>
