ajout des informations

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
         <script src="js/app/auth.controller.js"></script>
         <script src="js/app/controllers.module.js"></script>
         <script src="js/app/dashboard.controller.js"></script>
+        <script src="js/app/information.controller.js"></script>
         <script src="js/components/services.js"></script>
         <script src="js/app/parameters/controllers.module.js"></script>
         <script src="js/app/parameters/my-sports.controller.js"></script>
