--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,9 @@
         <script src="js/app/dashboard.controller.js"></script>
         <script src="js/app/information.controller.js"></script>
         <script src="js/components/services.js"></script>
-        <script src="js/app/parameters/controllers.module.js"></script>
-        <script src="js/app/parameters/my-sports.controller.js"></script>
+        <script src="js/app/account/account.controller.js"></script>
+        <script src="js/app/account/controllers.module.js"></script>
+        <script src="js/app/account/my-sports.controller.js"></script>
         <script src="js/components/auth/auth.module.js"></script>
         <script src="js/components/auth/auth.service.js"></script>
         <script src="js/components/auth/interceptor.service.js"></script>
