--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
         <script src="js/components/auth/user.service.js"></script>
         <script src="js/components/oauth-buttons/oauth-buttons.controller.js"></script>
         <script src="js/components/oauth-buttons/oauth-buttons.directive.js"></script>
+        <script src="js/components/sport/my-sport.service.js"></script>
         <script src="js/components/util/util.module.js"></script>
         <script src="js/components/util/util.service.js"></script>
         <!-- endinject -->
