--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <title></title>
         <!-- inject:css -->
+        <link rel="stylesheet" href="css/animate.css"></script>
         <link rel="stylesheet" href="css/ionic.app.css"></script>
         <link rel="stylesheet" href="css/style.css"></script>
         <!-- endinject -->
@@ -32,9 +33,9 @@
         <script src="js/components/auth/interceptor.service.js"></script>
         <script src="js/components/auth/router.decorator.js"></script>
         <script src="js/components/auth/user.service.js"></script>
+        <script src="js/components/sport/my-sport.service.js"></script>
         <script src="js/components/oauth-buttons/oauth-buttons.controller.js"></script>
         <script src="js/components/oauth-buttons/oauth-buttons.directive.js"></script>
-        <script src="js/components/sport/my-sport.service.js"></script>
         <script src="js/components/util/util.module.js"></script>
         <script src="js/components/util/util.service.js"></script>
         <!-- endinject -->
