--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-resource/angular-resource.js"></script>
         <script src="lib/angular-cookies/angular-cookies.js"></script>
+        <script src="lib/ngCordova/dist/ng-cordova.js"></script>
         <!-- endbower -->
         <!-- ionic/angularjs js -->
         <!-- cordova script (this will be a 404 during development) -->
@@ -38,6 +39,8 @@
         <script src="js/components/sport/my-sport.service.js"></script>
         <script src="js/components/util/util.module.js"></script>
         <script src="js/components/util/util.service.js"></script>
+        <script src="js/components/util/location/location.module.js"></script>
+        <script src="js/components/util/location/location.service.js"></script>
         <!-- endinject -->
     </head>
     <body ng-app="starter">
