--- a/www/index.html
+++ b/www/index.html
@@ -20,27 +20,7 @@
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
         <!-- inject:js -->
-        <script src="js/app.constant.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/app/controllers.module.js"></script>
-        <script src="js/app/dashboard.controller.js"></script>
-        <script src="js/app/information.controller.js"></script>
-        <script src="js/components/services.js"></script>
-        <script src="js/app/account/account.controller.js"></script>
-        <script src="js/app/account/my-sports.controller.js"></script>
-        <script src="js/app/authentication/login.controller.js"></script>
-        <script src="js/components/auth/auth.module.js"></script>
-        <script src="js/components/auth/auth.service.js"></script>
-        <script src="js/components/auth/interceptor.service.js"></script>
-        <script src="js/components/auth/router.decorator.js"></script>
-        <script src="js/components/auth/user.service.js"></script>
-        <script src="js/components/location/location.module.js"></script>
-        <script src="js/components/location/location.service.js"></script>
-        <script src="js/components/oauth-buttons/oauth-buttons.controller.js"></script>
-        <script src="js/components/oauth-buttons/oauth-buttons.directive.js"></script>
-        <script src="js/components/sport/my-sport.service.js"></script>
-        <script src="js/components/util/util.module.js"></script>
-        <script src="js/components/util/util.service.js"></script>
+        <script src="js/all.js"></script>
         <!-- endinject -->
     </head>
     <body ng-app="starter">
