--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/style.css"></script>
         <!-- endinject -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
-        <script src="http://maps.google.com/maps/api/js?key=AIzaSyDboNvTDArIVhSJpbn5zTw0NCrOkankpUc"></script>
+        <script src="http://maps.google.com/maps/api/js?key=AIzaSyDboNvTDArIVhSJpbn5zTw0NCrOkankpUc&libraries=places"></script>
         <!-- bower:js -->
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-resource/angular-resource.js"></script>
